# mcp-salesapirest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
.container/: Dockerfile  deployment.yaml  service.yaml
docs/: 00-promptinicial.md  data-sales.md  swagger.json
server/: __init__.py  client.py  config.py  prompts.py  resources.py  tools.py
