[project]
name = "mcp-salesapirest"
version = "0.1.0"
description = "Servidor MCP para análise de dados da Sales Dataset API REST"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-salesapirest = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
